# PredTransDuckDB

./: CMakeLists.txt  JOB.sql  JOB_temp.sql  README.md  TPCH.sql
src/: CMakeLists.txt
src/common/: radix_partitioning.cpp
src/execution/: column_binding_resolver.cpp  join_hashtable.cpp  physical_plan_generator.cpp
src/main/: client_context.cpp  pending_query_result.cpp
src/optimizer/: CMakeLists.txt  compressed_materialization.cpp  filter_pushdown.cpp  optimizer.cpp  remove_unused_columns.cpp
src/parallel/: executor.cpp  task_scheduler.cpp
src/planner/: logical_operator.cpp
test_scripts/JOB&TPCH/: CMakeLists.txt  main.cpp
test_scripts/TPCDS/: CMakeLists.txt  main.cpp  run.sh
tools/shell/: shell.c
tpc-ds/: query1.sql  query10.sql  query11.sql  query12.sql  query13.sql  query14.sql  query15.sql  query16.sql  query17.sql  query18.sql  query19.sql  query2.sql  query20.sql  query21.sql  query22.sql  query23.sql  query24.sql  query25.sql  query26.sql  query27.sql  query28.sql  query29.sql  query3.sql  query30.sql  query31.sql  query32.sql  query33.sql  query34.sql  query35.sql  query36.sql  query37.sql  query38.sql  query39.sql  query4.sql  query40.sql  query41.sql  query42.sql  query43.sql  query44.sql  query45.sql  (+59 more)
tpc-ds/in_mem/: query1.sql  query10.sql  query11.sql  query13.sql  query14.sql  query15.sql  query16.sql  query18.sql  query19.sql  query2.sql  query21.sql  query22.sql  query23.sql  query24.sql  query26.sql  query27.sql  query28.sql  query29.sql  query30.sql  query31.sql  query32.sql  query36.sql  query37.sql  query38.sql  query39.sql  (+56 more)
(+90 files in other folders)
